# dnaworks_py

./: LICENSE  README.md  cli.py  environment.yml  optimizer.py  overlaps.py  pyproject.toml  scoring.py  sequence.py  tm.py
benchmark/example_fastas/: cas9.fasta  kanR.fasta  mbp.fasta  mcherry.fasta  trxa.fasta  ulp1.fasta
benchmark/fortran_inputs/aav5_vp1/: DNAWORKS.inp  LOGFILE.txt
benchmark/fortran_inputs/ampR/: DNAWORKS.inp
benchmark/fortran_inputs/cas9/: DNAWORKS.inp
benchmark/fortran_inputs/kanR/: DNAWORKS.inp  LOGFILE.txt
benchmark/fortran_inputs/mbp/: DNAWORKS.inp  LOGFILE.txt
benchmark/fortran_inputs/mcherry/: DNAWORKS.inp
benchmark/fortran_inputs/sfgfp/: DNAWORKS.inp  LOGFILE.txt
benchmark/fortran_inputs/snaptag/: DNAWORKS.inp  LOGFILE.txt
benchmark/fortran_inputs/trxa/: DNAWORKS.inp  LOGFILE.txt
benchmark/fortran_inputs/ulp1/: DNAWORKS.inp
benchmark/fortran_outputs/: aav5_vp1.json  ampR.json  ampR.txt  cas9.json  cas9.txt  kanR.json  mbp.json  mcherry.json  mcherry.txt  sfgfp.json  snaptag.json  trxa.json  ulp1.json  ulp1.txt
benchmark/python_outputs/: aav5_vp1.json  ampR.json  cas9.json  kanR.json  mbp.json  mcherry.json  sfgfp.json  snaptag.json  trxa.json  ulp1.json
benchmark/results/: fortran_timing.csv  python_timing.csv
benchmark/scripts/: compare.py  generate_inputs.py  parse_fortran.py  run_benchmark.sh
example_fastas/: aav5_vp1.fasta  ampR.fasta  sfgfp.fasta  snaptag.fasta
