[project]
name = "dnaworks_py"
version = "0.1.0"
description = "Design overlapping oligonucleotides for PCR-based gene assembly"
readme = "README.md"
license = {text = "GPL-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Adam Smiley"},
]

dependencies = [
    "biopython>=1.80",
]

[project.optional-dependencies]
benchmark = [
    "matplotlib",
    "scipy",
    "ViennaRNA",
]

[project.scripts]
dnaworks-py = "cli:main"
